# MyRobot

./: README.md  build_and_run.sh  gap_analysis_report.md  requirements.txt  start_robot.py  test_memory_module.py  test_voice_interaction.py  小智助手集成方案.md
config/: config.json
data/: robot.db
deploy/mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  mosquitto.conf
docs/: 产品规划文档.md  需求文档.md
ros2_ws/: README.md
ros2_ws/src/: json.json  test_memory.db  test_memory.py
ros2_ws/src/emotion_interaction/: package.xml  setup.cfg  setup.py
ros2_ws/src/emotion_interaction/emotion_interaction/: emotion_engine_node.py  text_to_speech_node.py  voice_recognition_node.py
ros2_ws/src/emotion_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/emotion_msgs/msg/: EmotionState.msg
ros2_ws/src/entertainment/: package.xml  setup.py
ros2_ws/src/entertainment/entertainment/: story_player_node.py
ros2_ws/src/home_control/: package.xml  setup.py
ros2_ws/src/home_control/home_control/: home_control_node.py  system_control_node.py
ros2_ws/src/life_assistance/: package.xml  setup.py  test_alarm.py  test_confirm_timeout.py
ros2_ws/src/life_assistance/life_assistance/: mcp_bridge_node.py  schedule_reminder_node.py
ros2_ws/src/life_assistance/msg/: Reminder.msg
ros2_ws/src/memory/: __init__.py  test_memory.py
ros2_ws/src/memory/memory/: __init__.py  memory_manager.py
ros2_ws/src/memory/memory/models/: __init__.py  calendar.py  preference.py  reminder.py  user_profile.py
ros2_ws/src/memory/memory/storage/: __init__.py  cloud_storage.py  local_storage.py
ros2_ws/src/memory/memory/utils/: __init__.py  encryption.py  import_export.py
ros2_ws/src/remote_monitoring/: package.xml  setup.py
ros2_ws/src/remote_monitoring/remote_monitoring/: video_streaming_node.py
ros2_ws/src/robot_bringup/: package.xml  setup.py
ros2_ws/src/robot_bringup/launch/: emotion_launch.py  robot_launch.py  vision_launch.py  xiaozhi.launch.py
ros2_ws/src/robot_bringup/robot_bringup/: mock_motion_node.py
ros2_ws/src/vision_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/vision_msgs/msg/: FaceDetection.msg  ObjectDetection.msg
ros2_ws/src/vision_msgs/srv/: DetectObjects.srv  RecognizeFace.srv
ros2_ws/src/vision_perception/: package.xml  setup.py
ros2_ws/src/vision_perception/vision_perception/: face_detection_node.py
ros2_ws/src/voice_interaction/: package.xml  setup.py
ros2_ws/src/voice_interaction/launch/: voice_interaction_launch.py
ros2_ws/src/voice_interaction/voice_interaction/: audio_device_manager.py  audio_service.py  config.py  enums.py  integrated_wake_detector.py  logging_config.py  mqtt_service.py  recorder_session.py  udp_audio_transport.py  utils.py  vad_detector.py  wake_word_detector.py  xiaozhi.py
ros2_ws/src/voice_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/voice_msgs/msg/: VoiceCommand.msg
ros2_ws/src/voice_msgs/srv/: TextToSpeech.srv  ToolCall.srv
ros2_ws/src/voice_wake/: test_wake_simple.py
scripts/: alarm_mcp_server.py
utils/: config_loader.py  data_store.py  logger.py
